Create gatlingfx gradle task